--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="container" style="background-color:#002930">
             <p style="padding-bottom: 0px; margin-bottom:0px; font-size:50px; color:#fff">n8dev</p>
             <p style="font-size: 19px; padding-top: 10px; color: #fff">Ordered A Channel Banner</p>
-            <p style="padding-top: 10px; color: #fff">"10/10 couldn’t have asked for anything better"</p>
+            <p style="padding-top: 10px; color: #fff">"10/10 couldn't have asked for anything better"</p>
         </div>
         <p style="color: #0DE469">...is yours next?</p>
     </section>
@@ -147,7 +147,7 @@
     </section>
 
     <section class="Footer">
-        <p style="color: #01FF6E">© Michael Dors 2022</p>
+        <p style="color: #01FF6E">Copyright Michael Dors 2022</p>
     </section>
 
     <script>
