--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     </section>
 
     <section class="Footer">
-        <p style="color: #01FF6E">© Michael Dors 2022</p>
+        <p style="color: #01FF6E">Copyright Michael Dors 2022</p>
     </section>
 
     <script>
