--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header" id="myHeader">
         <nav>
-            <a href="index.html"><img src="files/logo.png"></a>
+            <a href="index.html"><img src="Files/logo.png"></a>
 
             <div class="nav-links" id="navLinks">
                 <ul>
