--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         }
 
         function showMenu() {
-            navLinksMobile.style.right = "0";
+            navLinksMobile.style.display = '';
         }
         function hideMenu() {
-            navLinksMobile.style.right = "-10000px";
+            navLinksMobile.style.display = 'none';
         }
 
         function openEngage() {
