--- a/index.html
+++ b/index.html
@@ -96,6 +96,77 @@
                 </div>
             </div>
         </div>
+        
+        <div class="movie-list-container">
+            <h1 class="movie-list-title">Examples</h1>
+            <div class="movie-list-wrapper">
+                <div class="movie-list">
+                    <div class="shimmer bottomhalf">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="Files/gravitytechsynthbanner.png" alt="">
+                            <span class="movie-list-item-title">Gravity Tech</span>
+                            <p class="movie-list-item-desc">
+                                Learn about technology and watch us push it to it's limits!
+                            </p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                    <div class="shimmer bottomhalf">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="Files/Discord.png" alt="">
+                            <span class="movie-list-item-title">Geode</span>
+                            <p class="movie-list-item-desc">
+                                When a man loses his wife, how far will he go to avenge her death?
+                            </p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                    <div class="shimmer bottomhalf">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="Files/uncommonsynthbanner.png" alt="">
+                            <span class="movie-list-item-title">Uncommon</span>
+                            <p class="movie-list-item-desc">
+                                Behind the scenes and how-to videos for our content!
+                            </p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                    <div class="shimmer bottomhalf">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="Files/Breathteching.png" alt="">
+                            <span class="movie-list-item-title">Breathteching</span>
+                            <p class="movie-list-item-desc">
+                                Dive deeper than Gravity Tech in the vast world of tech.
+                            </p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                    <div class="shimmer bottomhalf">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="Files/Classics.png" alt="">
+                            <span class="movie-list-item-title">Classics</span>
+                            <p class="movie-list-item-desc">
+                                Exclusive videos from the start of Gravity!
+                            </p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+
+                    <div class="shimmer bottomhalf">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="Files/GravityGames360Banner.png" alt="">
+                            <span class="movie-list-item-title">GravityGames360</span>
+                            <p class="movie-list-item-desc">
+                                Fun gaming videos!
+                            </p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+
+                </div>
+                <i class="fas fa-chevron-right arrow"></i>
+            </div>
+        </div>
 
     </section>
 
