--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
                 </ul>
             </div>
 
-
-
-
-
-
-            <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
 
 
@@ -88,76 +82,6 @@
             </div>
         </div>
 
-        <div class="movie-list-container">
-            <h1 class="movie-list-title">Examples</h1>
-            <div class="movie-list-wrapper">
-                <div class="movie-list">
-                    <div class="shimmer bottomhalf">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="Files/gravitytechsynthbanner.png" alt="">
-                            <span class="movie-list-item-title">Gravity Tech</span>
-                            <p class="movie-list-item-desc">
-                                Learn about technology and watch us push it to it's limits!
-                            </p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-                    <div class="shimmer bottomhalf">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="Files/Discord.png" alt="">
-                            <span class="movie-list-item-title">Geode</span>
-                            <p class="movie-list-item-desc">
-                                When a man loses his wife, how far will he go to avenge her death?
-                            </p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-                    <div class="shimmer bottomhalf">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="Files/uncommonsynthbanner.png" alt="">
-                            <span class="movie-list-item-title">Uncommon</span>
-                            <p class="movie-list-item-desc">
-                                Behind the scenes and how-to videos for our content!
-                            </p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-                    <div class="shimmer bottomhalf">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="Files/Breathteching.png" alt="">
-                            <span class="movie-list-item-title">Breathteching</span>
-                            <p class="movie-list-item-desc">
-                                Dive deeper than Gravity Tech in the vast world of tech.
-                            </p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-                    <div class="shimmer bottomhalf">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="Files/Classics.png" alt="">
-                            <span class="movie-list-item-title">Classics</span>
-                            <p class="movie-list-item-desc">
-                                Exclusive videos from the start of Gravity!
-                            </p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-
-                    <div class="shimmer bottomhalf">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="Files/GravityGames360Banner.png" alt="">
-                            <span class="movie-list-item-title">GravityGames360</span>
-                            <p class="movie-list-item-desc">
-                                Fun gaming videos!
-                            </p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-
-                </div>
-                <i class="fas fa-chevron-right arrow"></i>
-            </div>
-        </div>
 
     </section>
 
@@ -180,7 +104,7 @@
         <div class="container" style="background-color:#002930">
             <p style="padding-bottom: 0px; margin-bottom:0px; font-size:50px; color:#fff">n8dev</p>
             <p style="font-size: 19px; padding-top: 10px; color: #fff">Ordered A Channel Banner</p>
-            <p style="padding-top: 10px; color: #fff">"10/10 couldn’t have asked for anything better"</p>
+            <p style="padding-top: 10px; color: #fff">"10/10 couldnÂ’t have asked for anything better"</p>
         </div>
         <p style="color: #0DE469">...is yours next?</p>
     </section>
@@ -209,7 +133,7 @@
     </section>
 
     <section class="Footer">
-        <p style="color: #01FF6E">© Michael Dors 2022</p>
+        <p style="color: #01FF6E">Â© Michael Dors 2022</p>
     </section>
 
     <script>
