--- a/about.html
+++ b/about.html
@@ -22,13 +22,6 @@
                     <li><a href="about.html" style="color:#ffffff">About</a> </li>
                 </ul>
             </div>
-
-
-
-
-
-
-            <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
 
 
@@ -56,7 +49,7 @@
     </section>
 
     <section class="Footer">
-        <p style="color: #01FF6E">© Michael Dors 2022</p>
+        <p style="color: #01FF6E">Â© Michael Dors 2022</p>
     </section>
 
     <script>
