--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
 
     <section class="Footer">
-        <p style="color: #01FF6E">© Michael Dors 2022</p>
+        <p style="color: #01FF6E">Copyright Michael Dors 2022</p>
     </section>
 
     <script>
