--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header" id="myHeader">
         <nav>
-            <a href="index.html"><img src="files/logo.png"></a>
+            <a href="index.html"><img src="./Files/logo.png"></a>
 
             <div class="nav-links" id="navLinks">
                 <ul>
@@ -104,7 +104,7 @@
         <div class="container" style="background-color:#002930">
             <p style="padding-bottom: 0px; margin-bottom:0px; font-size:50px; color:#fff">n8dev</p>
             <p style="font-size: 19px; padding-top: 10px; color: #fff">Ordered A Channel Banner</p>
-            <p style="padding-top: 10px; color: #fff">"10/10 couldnt have asked for anything better"</p>
+            <p style="padding-top: 10px; color: #fff">"10/10 couldn't have asked for anything better"</p>
         </div>
         <p style="color: #0DE469">...is yours next?</p>
     </section>
