--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
             <div class="nav-links" id="navLinks">
                 <ul>
                     <button2 onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire Me</button2>
-                    <br>
-                    <li><a href="index.html" style="color:#ffffff">Home</a></li>
-                    <br>
-                    <li><a href="about.html" style="color:#ffffff">About</a> </li>
-                    <br>
+                    <li><i class="fa-solid fa-house"></i></li>
+                    <li><i class="fa-solid fa-circle-info"></i></li>
                 </ul>
             </div>
 
