--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             <div class="nav-links" id="navLinks">
                 <ul>
-                    <button2 onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire Me</button2>
-                    <li><i class="fa-solid fa-house"></i></li>
-                    <li><i class="fa-solid fa-circle-info"></i></li>
+                    <button2 onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
+                    <li><i style="color:#ffffff" class="fa-solid fa-house"></i></li>
+                    <li><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></li>
                 </ul>
             </div>
 
