--- a/about.html
+++ b/about.html
@@ -17,12 +17,9 @@
 
             <div class="nav-links" id="navLinks">
                 <ul>
-                    <button2 onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire Me</button2>
-                    <br>
-                    <li><a href="index.html" style="color:#ffffff">Home</a></li>
-                    <br>
-                    <li><a href="about.html" style="color:#ffffff">About</a> </li>
-                    <br>
+                    <button2 onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
+                    <li><i style="color:#ffffff" class="fa-solid fa-house"></i></li>
+                    <li><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></li>
                 </ul>
             </div>
 
