--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 
             <div class="nav-links" id="navLinks">
                 <ul>
-                    <button2 onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
+                    <button2 class="hiremebuttonusethisclasslol" onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
                     <li><i style="color:#ffffff" class="fa-solid fa-house"></i></li>
                     <li><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></li>
                 </ul>
