--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <button2 class="hiremebuttonusethisclasslol" onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
                     <li><a href="index.html"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
-                    <li><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></li>
+                    <li><a href="about.html"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
                 </ul>
             </div>
 
