--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,12 @@
                 <source src="simple3drender2.mp4" type="video/mp4">
             </video>
         </div>
+        <div style="padding-top:30px; padding-left:30px;">
+            <h1 style="color: #01FF6E; font-weight: 100;">Captions</h1>
+            <video width="640" height="360" controls style="border-radius:20px;">
+                <source src="captions.mp4" type="video/mp4">
+            </video>
+        </div>
     </section>
     
 
