--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section class="Discord">
         <h1>
-            I make videos, graphic designs, and creative media in general.
+            I make videos and creative media in general.
         </h1>
     </section>
     
