--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <section class="WhatIDo">
         <h1>I do all of these things:</h1>
+        <center>
         <div class="cards">
             <div class="card card1">
                 <div class="container">
@@ -90,6 +91,7 @@
                 </div>
             </div>
         </div>
+        </center>
 
 
     </section>
