--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="with=device-width, initial-scale=1.0" />
     <title>Michael Dors</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="apple-touch-icon" href="Images/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;0,800;1,400&family=Rajdhani:wght@700&display=swap" rel="stylesheet">
