--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="with=device-width, initial-scale=1.0" />
     <title>Michael Dors</title>
+    <link rel="apple-touch-icon" href="Images/apple-touch-icon.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
