--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <section style="background-color: #FFF2BB; color: #002930;">
         <h1 style="padding-left:100px; padding-right:100px; padding-top:50px;">Hi! I'm Michael!</h1>
         <p style="padding-left: 100px; padding-right: 100px; padding-bottom:100px;">I'm a teenager who really enjoys making content. Starting with videos, then music, websites, and video games, I have tons of experience.</p>
-        <p style="padding-left: 100px; padding-right: 100px; padding-bottom:100px;">I'm saving up for a new graphics card and eventually other PC parts. so I can make better videos and content. Any purchases you make will go towards these goals.</p>
+        <p style="padding-left: 100px; padding-right: 100px; padding-bottom:100px;">I'm saving up for a new graphics card and eventually other PC parts, so I can make better videos and content. Any purchases you make will go towards these goals.</p>
 
         <div>
             <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
