--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
     </section>
 
     <section style="background-color: #FFF2BB; color: #002930;">
-      <p style="padding-left: 100px; padding-right: 100px; padding-bottom:100px; height:100vh;"><a href="index.html">Welp... this is awkward... how about you go home...</a></p>
+      <p style="padding-left: 100px; padding-right: 100px; padding-bottom:100px; height:100vh;"><a href="michaeldors.com">Welp... this is awkward... how about you go home...</a></p>
 
         <div>
             <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
