--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
             <div class="nav-links" id="navLinks">
                 <ul>
                     <button2 class="hiremebuttonusethisclasslol" onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
-                    <li><a href="michaeldors.com"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
-                    <li><a href="michaeldors.com/about"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
+                    <li><a href="index"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
+                    <li><a href="about"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
                 </ul>
             </div>
 
