--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="nav-links" id="navLinks">
                 <ul>
                     <button2 class="hiremebuttonusethisclasslol" onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
-                    <li><a href="michaeldors.com"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
-                    <li><a href="michaeldors.com/about"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
+                    <li><a href="index"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
+                    <li><a href="about"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
                 </ul>
             </div>
 
@@ -46,7 +46,7 @@
             <h1>
                 Check out some examples!
             </h1>
-            <button onclick="location.href='michaeldors.com/portfolio'">
+            <button onclick="location.href='portfolio'">
                 Examples
             </button>
         </section>
