--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <section class="header" id="myHeader">
         <nav>
-            <a href="index.html"><img src="./Files/logo.png"></a>
+            <a href="index"><img src="./Files/logo.png"></a>
 
             <div class="nav-links" id="navLinks">
                 <ul>
