--- a/portfolio.html
+++ b/portfolio.html
@@ -32,32 +32,32 @@
     <section class="portfolio" style="background-color: #002930">
         <div style="padding-top:30px; padding-left:30px;">
             <h1 style="color:#01FF6E; font-weight:100;">Discord Chat Animation</h1>
-            <video width="640" height="360" controls style="border-radius:20px;">
+            <video width="75%" controls style="border-radius:20px;">
                 <source src="discordchat.mp4" type="video/mp4">
             </video>
         </div>
         <div style="padding-top:30px; padding-left:30px;">
             <h1 style="color: #01FF6E; font-weight: 100;">Discord Voice Animation</h1>
-            <video width="640" height="360" controls style="border-radius:20px;">
+            <video width="75%" controls style="border-radius:20px;">
                 <source src="discordvoice.mp4" type="video/mp4">
             </video>
         </div>
 
         <div style="padding-top:30px; padding-left:30px;">
             <h1 style="color: #01FF6E; font-weight: 100;">Simple 3D Animation</h1>
-            <video width="640" height="360" controls style="border-radius:20px;">
+            <video width="75%" controls style="border-radius:20px;">
                 <source src="simple3drender1.mp4" type="video/mp4">
             </video>
         </div>
         <div style="padding-top:30px; padding-left:30px;">
             <h1 style="color: #01FF6E; font-weight: 100;">Simple 3D Animation</h1>
-            <video width="640" height="360" controls style="border-radius:20px;">
+            <video width="75%" controls style="border-radius:20px;">
                 <source src="simple3drender2.mp4" type="video/mp4">
             </video>
         </div>
         <div style="padding-top:30px; padding-left:30px;">
             <h1 style="color: #01FF6E; font-weight: 100;">Captions</h1>
-            <video width="640" height="360" controls style="border-radius:20px;">
+            <video width="75%" controls style="border-radius:20px;">
                 <source src="captions.mp4" type="video/mp4">
             </video>
         </div>
