--- a/404.html
+++ b/404.html
@@ -14,13 +14,13 @@
 <body>
     <section class="header" id="myHeader">
         <nav>
-            <a href="index"><img src="Files/logo.png"></a>
+            <a href="index.html"><img src="Files/logo.png"></a>
 
             <div class="nav-links" id="navLinks">
                 <ul>
                     <button2 class="hiremebuttonusethisclasslol" onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
-                    <li><a href="index"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
-                    <li><a href="about"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
+                    <li><a href="index.html"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
+                    <li><a href="about.html"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
                 </ul>
             </div>
 
@@ -30,7 +30,7 @@
     </section>
 
     <section style="background-color: #FFF2BB; color: #002930;">
-      <p style="padding-left: 100px; padding-right: 100px; padding-bottom:100px; height:100vh;"><a href="index">Welp... this is awkward... how about you go home...</a></p>
+      <p style="padding-left: 100px; padding-right: 100px; padding-bottom:100px; height:100vh;"><a href="index.html">Welp... this is awkward... how about you go home...</a></p>
 
         <div>
             <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
