--- a/portfolio.html
+++ b/portfolio.html
@@ -14,13 +14,13 @@
 <body>
     <section class="header" id="myHeader">
         <nav>
-            <a href="index"><img src="./Files/logo.png"></a>
+            <a href="index.html"><img src="./Files/logo.png"></a>
 
             <div class="nav-links" id="navLinks">
                 <ul>
                     <button2 class="hiremebuttonusethisclasslol" onclick="location.href='mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request'">Hire</button2>
-                    <li><a href="index"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
-                    <li><a href="about"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
+                    <li><a href="index.html"><i style="color:#ffffff" class="fa-solid fa-house"></i></a></li>
+                    <li><a href="about.html"><i style="color:#ffffff" class="fa-solid fa-circle-info"></i></a></li>
                 </ul>
             </div>
 
