--- a/index.html
+++ b/index.html
@@ -31,9 +31,20 @@
     <section class="Top">
         <div>
             <h1 style="color: #002930; text-align:center; padding-top:50px; padding-bottom:50px;">
-                next level creativity without breaking the bank
+                next level video editing without breaking the bank
             </h1>
         </div>
+    </section>
+    
+    <section class="HireMe">
+        <h1>Perfect For:</h1>
+        <ul>
+            <li><p>Photo/Video Collages for An Event</p></li>
+            <li><p>YouTube Videos</p></li>
+            <li><p>Advertisements</p></li>
+            <li><p>Videos of Vacations/Other Memories</p></li>
+            <li><p>Your Scenario</p></li>
+        </ul>
     </section>
 
     <section class="Discord">
