--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         </div>
     </section>
     
-    <section class="HireMe">
+    <section class="HireMe" style="background-color:0DE469;">
         <h1>Perfect For:</h1>
         <ul>
-            <li><p>Photo/Video Collages for An Event</p></li>
-            <li><p>YouTube Videos</p></li>
-            <li><p>Advertisements</p></li>
-            <li><p>Videos of Vacations/Other Memories</p></li>
-            <li><p>Your Scenario</p></li>
+            <li><p>- Photo/Video Collages for An Event</p></li>
+            <li><p>- YouTube Videos</p></li>
+            <li><p>- Advertisements</p></li>
+            <li><p>- Videos of Vacations/Other Memories</p></li>
+            <li><p>- Your Scenario</p></li>
         </ul>
     </section>
 
