--- a/order.html
+++ b/order.html
@@ -29,6 +29,47 @@
 
     </section>
 
+            <center>
+        <div class="cards">
+            <div class="card card1">
+                <div class="container">
+                    <img src="Files/VideoEditing.png" alt="VideoEditing">
+                </div>
+                <div class="details">
+                    <h3>Video Editing</h3>
+                    <p>Editing pre-existing videos to be shorter, adding effects, adding captions, and more.</p>
+                </div>
+            </div>
+            <div class="card card2">
+                <div class="container">
+                    <img src="Files/Collage.png" alt="VideoEditing">
+                </div>
+                <div class="details">
+                    <h3>Collages</h3>
+                    <p>Taking photos and turning them into a stunning video!</p>
+                </div>
+            </div>
+            <div class="card card3">
+                <div class="container">
+                    <img src="Files/3danimation.png" alt="3D Renders">
+                </div>
+                <div class="details">
+                    <h3>3D Renders</h3>
+                    <p>Simple 3D animations and renders.</p>
+                </div>
+            </div>
+            <div class="card card4">
+                <div class="container">
+                    <img src="Files/similar.png" alt="SimilarProjects">
+                </div>
+                <div class="details">
+                    <h3>Anything Similar</h3>
+                    <p>Just contact me and ask for what you want.</p>
+                </div>
+            </div>
+        </div>
+        </center>
+    
     <section style=" background: linear-gradient(to right, #01FF6E, #3DCB00);">
         <div>
             <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
