--- a/order.html
+++ b/order.html
@@ -28,47 +28,21 @@
 
 
     </section>
-
+<section class="WhatIDo" id="Q1">
             <center>
         <div class="cards">
             <div class="card card1">
-                <div class="container">
-                    <img src="Files/VideoEditing.png" alt="VideoEditing">
-                </div>
                 <div class="details">
-                    <h3>Video Editing</h3>
-                    <p>Editing pre-existing videos to be shorter, adding effects, adding captions, and more.</p>
+                    <h3>Get a Pricing Estimate</h3>
                 </div>
             </div>
             <div class="card card2">
-                <div class="container">
-                    <img src="Files/Collage.png" alt="VideoEditing">
-                </div>
                 <div class="details">
-                    <h3>Collages</h3>
-                    <p>Taking photos and turning them into a stunning video!</p>
+                    <h3>Message Me to Order</h3>
                 </div>
             </div>
-            <div class="card card3">
-                <div class="container">
-                    <img src="Files/3danimation.png" alt="3D Renders">
-                </div>
-                <div class="details">
-                    <h3>3D Renders</h3>
-                    <p>Simple 3D animations and renders.</p>
-                </div>
-            </div>
-            <div class="card card4">
-                <div class="container">
-                    <img src="Files/similar.png" alt="SimilarProjects">
-                </div>
-                <div class="details">
-                    <h3>Anything Similar</h3>
-                    <p>Just contact me and ask for what you want.</p>
-                </div>
-            </div>
-        </div>
         </center>
+    </section>
     
     <section style=" background: linear-gradient(to right, #01FF6E, #3DCB00);">
         <div>
