--- a/order.html
+++ b/order.html
@@ -59,7 +59,10 @@
                     <h3>Collage</h3>
                 </div>
             </div>
-                        <div class="card card2">
+            </div>
+                
+                <div class="cards">
+                                            <div class="card card2">
                 <div class="details">
                     <h3>Advertisement</h3>
                 </div>
@@ -68,7 +71,7 @@
                 <div class="details">
                     <h3>Other</h3>
                 </div>
-            </div>
+                    </div>
             <p>These are examples. Your selection will not affect the final product, but will give me a better understanding of the project.</p>
         </center>
     </section>
