--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="marquee">
     <p>Websites | Designs | Videography | 3D Animations </p>
   </div>
-  <img class="talents" style="width:300px; border-radius:50%;" src="talents.png" />
+  <img id="circlelol" class="talents" style="width:300px; border-radius:50%;" src="talents.png" />
   <br>
   <br>
   <br>
