--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
 </head>
 
 <body>
+  <div class="header" id="myheader">
+  <nav>
 
+    <div class="nav-links" id="navLinks">
+        <ul>
+            <li><a onclick="home()"><i style="color:#000000" class="fa-solid fa-house"></i></a></li>
+            <Br>
+            <li><a onclick="work()"><i style="color:#000000" class="fa-solid fa-circle-info"></i></a></li>
+            <br>
+            <li><a href="mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request" target="_blank"><i style="color:#000000" class="fa-solid fa-address-card"></i></a></li>
+        </ul>
+    </div>
+
+</nav>
+</div>
 <div style="background-color: #000000;">
   <p style="color: white;">The site was recently updated to match the new branding. If you have any problems, make sure to contact me about them, and you can still visit the old site here:</p>
   <a style="color:white; font-size: 16px; margin-left:20px;" href="old/oldindex.html">Old Site</a>
@@ -28,9 +42,9 @@
   <p class="barcode">MICHAELDORS.COM</p>
 
   <div class="marquee">
-    <p>Websites | Designs | Videography | 3D Animations </p>
+    <p>Websites | Designs | Videography | 3D Animations</p>
   </div>
-  <img id="circlelol" class="talents" style="width:300px; border-radius:50%;" src="talents.png" />
+  <img class="talents" style="width:300px; border-radius:50%;" src="talents.png" />
   <br>
   <br>
   <br>
@@ -220,7 +234,7 @@
       <p>Prior to the clean red and black, this was the brand kit for this website.</p>
       <br>
       <br>
-  <img style="max-width:75%" src="Images/OldBrandKit.png">    
+  <img style="height: 6in;" src="Images/OldBrandKit.png">    
   <br>
       <br>
       <p>This project included logo design.</p>
