--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <p>Prior to the clean red and black, this was the brand kit for this website.</p>
       <br>
       <br>
-  <img style="height: 6in;" src="Images/OldBrandKit.png">    
+  <img style="width: 70%;" src="Images/OldBrandKit.png">    
   <br>
       <br>
       <p>This project included logo design.</p>
