--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 <p>Here's a more detailed look into my portfolio:</p>
 <br>
 <br>
+  <section style="padding:0px;">
 <center>
 <p>Video</p>
 <h1>School Project - Cereal Advertisement</h1>
@@ -245,6 +246,7 @@
       <br>
       <br>
       </center>
+    </section>
 <br>
 <br>
 <br>
