--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 <script src="app.js"></script>
-<link rel="icon" type="image/x-icon" href="fav.ico">
+<link rel="icon" type="image/x-icon" href="Images/fav.ico">
 
 </head>
 
