--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 </section>
 <section style="background-color:black;">
   <p style="color:white">Real reviews from real customers...</p>
-<h1 style="color:white">"10/10 couldn't have asked for anything better" - Kimberly</h1>
-<h1 style="color:white">"Just watched it. We are so pleased. You did an excellent job on the video." - Nathan</h1>
+<h1 style="color:white">"10/10 couldn't have asked for anything better" - Nathan</h1>
+<h1 style="color:white">"Just watched it. We are so pleased. You did an excellent job on the video." - Kimberly</h1>
 <p style="color:white">...is your stamp of approval next?</p>
 
 </section>
