--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 <script src="app.js"></script>
 <link rel="icon" type="image/x-icon" href="Images/fav.ico">
-
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="header" id="myheader">
   <nav>
 
-    <div class="nav-links" id="navLinks">
+    <div data-aos="fade-up" class="nav-links" id="navLinks">
         <ul>
             <li><a onclick="home()"><i style="color:#000000" class="fa-solid fa-house"></i></a></li>
             <Br>
@@ -33,23 +33,23 @@
 
 </nav>
 </div>
-<div style="background-color: #000000;">
+<div data-aos="fade-up" style="background-color: #000000;">
   <p style="color: white;">The site was recently updated to match the new branding. If you have any problems, make sure to contact me about them, and you can still visit the old site here:</p>
   <a style="color:white; font-size: 16px; margin-left:20px;" href="old/oldindex.html">Old Site</a>
 </div>
 <section style="height: 100px"><p style=" color:#F6EEE3">hi</p></section>
-  <h1 id="home">My name is<br /><span style="color:#000000; padding-top:100px;">Michael Dors</span></h1>
-  <p class="barcode">MICHAELDORS.COM</p>
+  <h1 data-aos="fade-up" id="home">My name is<br /><span style="color:#000000; padding-top:100px;">Michael Dors</span></h1>
+  <p data-aos="fade-up" class="barcode">MICHAELDORS.COM</p>
 
   <div class="marquee">
-    <p>Websites | Designs | Videography | 3D Animations</p>
+    <p data-aos="fade-up">Websites | Designs | Videography | 3D Animations</p>
   </div>
   <img class="talents" style="width:300px; border-radius:50%;" src="talents.png" />
   <br>
   <br>
   <br>
-  <h1 style="color:black">I create content that engages a wide variety of audiences,</h1>
-  <h1 style="color:red">Is yours next?</h1>
+  <h1 data-aos="fade-up" style="color:black">I create content that engages a wide variety of audiences,</h1>
+  <h1 data-aos="fade-up" style="color:red">Is yours next?</h1>
   <br>
 
   <br>
@@ -68,8 +68,8 @@
     </svg>
 </div>
   <section class="HireMe" style="background-color:#000000; color:white; padding-top:30px; padding-bottom: 30px;">
-    <h1>Perfect For:</h1>
-    <ul style="color:white;">
+    <h1 data-aos="fade-up">Perfect For:</h1>
+    <ul data-aos="fade-up" style="color:white;">
         <li><p style="color:white; font-size: 20px;">- Photo/Video Collages for An Event</p></li>
         <li><p style="color:white; font-size: 20px;">- YouTube Videos</p></li>
         <li><p style="color:white; font-size: 20px;">- Advertisements</p></li>
@@ -80,7 +80,7 @@
     </ul>
 </section>
   <section style="background:black; padding-top:30px; padding-bottom:30px;">
-    <h1 style="padding-right: 10px;">I am willing to create simple websites, logos/designs, videos, and simple 3D animations.</h1>
+    <h1 data-aos="fade-up" style="padding-right: 10px;">I am willing to create simple websites, logos/designs, videos, and simple 3D animations.</h1>
 
   </section>
   <div style="rotate: 180deg;">
@@ -100,9 +100,9 @@
   <br>
   <br>
   <Br>
-  <h1 style="margin-bottom:10px">What are you waiting for...</h1>
-  <h1 style="color:Black; margin-bottom: 30px;">let's get in contact!</h1>
-  <button onclick="location.href='mailto:contact@michaeldors.com';">Shoot Me An Email!</button>
+  <h1 data-aos="fade-up" style="margin-bottom:10px">What are you waiting for...</h1>
+  <h1 data-aos="fade-up" style="color:Black; margin-bottom: 30px;">let's get in contact!</h1>
+  <button data-aos="fade-up" onclick="location.href='mailto:contact@michaeldors.com';">Shoot Me An Email!</button>
   
   <br>
   <br>
@@ -123,11 +123,11 @@
     </div>
   </section>
   <section class="HireMe" style="background-color: #ff0000; height:900px;">
-    <h1 style="color:#ffffff; padding-top:50px; padding-bottom:30px;">
+    <h1 data-aos="fade-up" style="color:#ffffff; padding-top:50px; padding-bottom:30px;">
         Check out an overview of my work!
     </h1>
     <center>
-      <iframe id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/embed/0kpS2A1YmK4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe data-aos="fade-up" id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/embed/0kpS2A1YmK4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </center>
     <section>
       <div style="rotate: 180deg;">
@@ -149,14 +149,14 @@
 <section style="height:100px; background-color:black">
 </section>
 <section style="background-color:black;">
-  <p style="color:white">Real reviews from real customers...</p>
-<h1 style="color:white">"10/10 couldn't have asked for anything better" - Nathan</h1>
-<h1 style="color:white">"Just watched it. We are so pleased. You did an excellent job on the video." - Kimberly</h1>
-<p style="color:white">...is your stamp of approval next?</p>
+  <p data-aos="fade-up" style="color:white">Real reviews from real customers...</p>
+<h1 data-aos="fade-up" style="color:white">"10/10 couldn't have asked for anything better" - Nathan</h1>
+<h1 data-aos="fade-up" style="color:white">"Just watched it. We are so pleased. You did an excellent job on the video." - Kimberly</h1>
+<p data-aos="fade-up" style="color:white">...is your stamp of approval next?</p>
 
 </section>
 <div class="marquee">
-  <p>michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com  /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com</p>
+  <p data-aos="fade-up">michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com  /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com /// michaeldors.com</p>
 </div>
 <div style="rotate: 180deg;">
   <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -176,21 +176,21 @@
 <br>
 <bR>
 <br>
-<h1>Still not sure?</h1>
-<p>Here's a more detailed look into my portfolio:</p>
+<h1 data-aos="fade-up">Still not sure?</h1>
+<p data-aos="fade-up">Here's a more detailed look into my portfolio:</p>
 <br>
 <br>
   <section style="padding:0px;">
 <center>
-<p>Video</p>
-<h1>School Project - Cereal Advertisement</h1>
-<p>This project only took me a few hours, and retains qualities of real commercials, while not being a serious one. The flashes of green present in the export have since been fixed, as I got a new graphics card.</p>
+<p data-aos="fade-up">Video</p>
+<h1 data-aos="fade-up">School Project - Cereal Advertisement</h1>
+<p data-aos="fade-up">This project only took me a few hours, and retains qualities of real commercials, while not being a serious one. The flashes of green present in the export have since been fixed, as I got a new graphics card.</p>
 <br>
 <br>
-<iframe id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/embed/3TziYv9Aopg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe data-aos="fade-up" id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/embed/3TziYv9Aopg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
-<p>This project included simple 3D animation and video editing.</p>
+<p data-aos="fade-up">This project included simple 3D animation and video editing.</p>
 <br>
 <br>
 <br>
@@ -199,12 +199,12 @@
 <br>
 </center>
 <center>
-  <p>Website</p>
-  <h1>michaeldors.com</h1>
-  <p>Although not as obvious, the page your on is a perfect example of the kind of things I can do with a website. When creating a website, you get to pick everything, I just code it.</p>
+  <p data-aos="fade-up">Website</p>
+  <h1 data-aos="fade-up">michaeldors.com</h1>
+  <p data-aos="fade-up">Although not as obvious, the page your on is a perfect example of the kind of things I can do with a website. When creating a website, you get to pick everything, I just code it.</p>
   <br>
   <br>
-  <p>This project included simple web development.</p>
+  <p data-aos="fade-up">This project included simple web development.</p>
   <br>
   <br>
   <br>
@@ -213,15 +213,15 @@
   <br>
   </center>
   <center>
-    <p>Concept</p>
-    <h1>Profile Card Sharing Website</h1>
-    <p>Using neobrutalism as the main design theme, I created a mockup of what a profile sharing web-app should look like. Although many dislike Neobrutalism, it is still a good display of my skills.</p>
+    <p data-aos="fade-up">Concept</p>
+    <h1 data-aos="fade-up">Profile Card Sharing Website</h1>
+    <p data-aos="fade-up">Using neobrutalism as the main design theme, I created a mockup of what a profile sharing web-app should look like. Although many dislike Neobrutalism, it is still a good display of my skills.</p>
     <br>
     <br>
-<img style="height: 6in;" src="Images/Neobrutalism.png">    
+<img data-aos="fade-up" style="height: 6in;" src="Images/Neobrutalism.png">    
 <br>
     <br>
-    <p>This project included logo design and user interface design.</p>
+    <p data-aos="fade-up">This project included logo design and user interface design.</p>
     <br>
     <br>
     <br>
@@ -230,15 +230,15 @@
     <br>
     </center>
     <center>
-      <p>Brand Kit</p>
-      <h1>michaeldors.com</h1>
-      <p>Prior to the clean red and black, this was the brand kit for this website.</p>
+      <p data-aos="fade-up">Brand Kit</p>
+      <h1 data-aos="fade-up">michaeldors.com</h1>
+      <p data-aos="fade-up">Prior to the clean red and black, this was the brand kit for this website.</p>
       <br>
       <br>
-  <img style="width: 70%;" src="Images/OldBrandKit.png">    
+  <img data-aos="fade-up" style="width: 70%;" src="Images/OldBrandKit.png">    
   <br>
       <br>
-      <p>This project included logo design.</p>
+      <p data-aos="fade-up">This project included logo design.</p>
       <br>
       <br>
       <br>
@@ -270,8 +270,8 @@
     <br>
     <br>
     <center>
-    <p>If you have questions or want to see more of my work, email me.</p>
-      <h1>contact@michaeldors.com</h1>
+    <p data-aos="fade-up">If you have questions or want to see more of my work, email me.</p>
+      <h1 data-aos="fade-up">contact@michaeldors.com</h1>
     </center>
     <br>
     <br>
@@ -281,3 +281,8 @@
 </body>
 
 </html>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
