--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 
 </nav>
 </div>
-<div data-aos="fade-up" style="background-color: #000000;">
-  <p style="color: white;">The site was recently updated to match the new branding. If you have any problems, make sure to contact me about them, and you can still visit the old site here:</p>
-  <a style="color:white; font-size: 16px; margin-left:20px;" href="old/oldindex.html">Old Site</a>
-</div>
+
 <section style="height: 100px"><p style=" color:#F6EEE3">hi</p></section>
   <h1 data-aos="fade-up" id="home">My name is<br /><span style="color:#000000; padding-top:100px;">Michael Dors</span></h1>
   <p data-aos="fade-up" class="barcode">MICHAELDORS.COM</p>
@@ -75,7 +72,7 @@
         <li><p style="color:white; font-size: 20px;">- Advertisements</p></li>
         <li><p style="color:white; font-size: 20px;">- Videos of Vacations/Other Memories</p></li>
         <li><p style="color:white; font-size: 20px;">- Simple Websites</p></li>
-        <li><p style="color:white; font-size: 20px;">- Professional Logos</p></li>
+        <li><p style="color:white; font-size: 20px;">- Professional Designs</p></li>
         <li><p style="color:white; font-size: 20px;">- Your Scenario</p></li>
     </ul>
 </section>
@@ -100,9 +97,9 @@
   <br>
   <br>
   <Br>
-  <h1 data-aos="fade-up" style="margin-bottom:10px">What are you waiting for...</h1>
-  <h1 data-aos="fade-up" style="color:Black; margin-bottom: 30px;">let's get in contact!</h1>
-  <button data-aos="fade-up" onclick="location.href='mailto:contact@michaeldors.com';">Shoot Me An Email!</button>
+  <h1 data-aos="fade-up" style="margin-bottom:10px">Considering hiring me?</h1>
+  <h1 data-aos="fade-up" style="color:Black; margin-bottom: 30px;">What are you waiting for? Let's get in contact!</h1>
+  <button data-aos="fade-up" onclick="location.href='mailto:contact@michaeldors.com';">Email Me</button>
   
   <br>
   <br>
