--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <Br>
             <li><a onclick="work()"><i style="color:#000000" class="fa-solid fa-circle-info"></i></a></li>
             <br>
+            <li><a onclick="pricing()"><i style="color:#000000" class="fa-solid fa-money-bill"></i></a></li>
+            <br>
             <li><a href="mailto:contact@michaeldors.com?subject=Michael%20Dors%20Creative%20Request" target="_blank"><i style="color:#000000" class="fa-solid fa-address-card"></i></a></li>
         </ul>
     </div>
@@ -247,6 +249,19 @@
 <br>
 <br>
 <br>
+  <h1 id="pricinginfo">Pricing</h1>
+      <h1 data-aos="fade-up">Video Pricing</h1>
+      <br>
+      <br>
+  <img data-aos="fade-up" style="width: 70%;" src="Images/vidpricing.png">    
+        <h1 data-aos="fade-up">Web Pricing</h1>
+      <br>
+      <br>
+  <img data-aos="fade-up" style="width: 70%;" src="Images/webpricing.png">  
+          <h1 data-aos="fade-up">Design Pricing</h1>
+      <br>
+      <br>
+  <img data-aos="fade-up" style="width: 70%;" src="Images/designpricing.png">  
 <Br>
   <div>
     <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
