--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
 <br>
 <br>
 <br>
+      <center>
+
   <h1 id="pricinginfo">Pricing</h1>
       <h1 data-aos="fade-up">Video Pricing</h1>
       <br>
@@ -263,6 +265,13 @@
       <br>
   <img data-aos="fade-up" style="width: 70%;" src="Images/designpricing.png">  
 <Br>
+        <br>
+      <br>
+        <br>
+      <br>
+        <br>
+      <br>
+  <center/>
   <div>
     <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
          viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
