--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
         <br>
       <br>
         <br>
+  <h1 data-aos="fade-up" style="margin-bottom:10px">Convinced? Need more Convincing?</h1>
+  <button data-aos="fade-up" onclick="location.href='mailto:contact@michaeldors.com';">Contact Me</button>
+  <br>
+  <br>
       <br>
         <br>
       <br>
