--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <br>
       <center>
 
-  <h1 id="pricinginfo">Pricing</h1>
+  <h1 id="pricinginfo" style="color:black">Pricing</h1>
       <h1 data-aos="fade-up">Video Pricing</h1>
       <br>
       <br>
