--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@
     <br>
     <br>
     <center>
-    <p data-aos="fade-up">If you have questions or want to see more of my work, email me.</p>
-      <h1 data-aos="fade-up">contact@michaeldors.com</h1>
+    <p data-aos="fade-up">Michael Dors 2023</p>
     </center>
     <br>
     <br>
