--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <br>
     <br>
     <center>
-    <p data-aos="fade-up">Michael Dors 2023</p>
+    <p>Michael Dors 2023</p>
     </center>
     <br>
     <br>
