--- a/index.html
+++ b/index.html
@@ -251,15 +251,27 @@
 <br>
       <center>
 
-  <h1 id="pricinginfo" style="color:black">Pricing</h1>
+  <h1 id="pricinginfo" data-aos="fade-up" style="color:black">Pricing</h1>
+        <br>
+        <br>
       <h1 data-aos="fade-up">Video Pricing</h1>
       <br>
       <br>
-  <img data-aos="fade-up" style="width: 70%;" src="Images/vidpricing.png">    
+  <img data-aos="fade-up" style="width: 70%;" src="Images/vidpricing.png">  
+          <br>
+  <br>
+      <br>
+        <br>
+      <br>
         <h1 data-aos="fade-up">Web Pricing</h1>
       <br>
       <br>
   <img data-aos="fade-up" style="width: 70%;" src="Images/webpricing.png">  
+          <br>
+  <br>
+      <br>
+        <br>
+      <br>
           <h1 data-aos="fade-up">Design Pricing</h1>
       <br>
       <br>
