--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
 <br>
       <center>
 
-  <h1 id="pricinginfo" data-aos="fade-up" style="color:black">Pricing</h1>
+  <h1  data-aos="fade-up" style="color:black">Pricing</h1>
         <br>
         <br>
       <h1 data-aos="fade-up">Video Pricing</h1>
       <br>
       <br>
-  <img data-aos="fade-up" style="width: 70%;" src="Images/vidpricing.png">  
+  <img id="pricinginfo" data-aos="fade-up" style="width: 70%;" src="Images/vidpricing.png">  
           <br>
   <br>
       <br>
