--- a/index.html
+++ b/index.html
@@ -197,6 +197,23 @@
 <br>
 <br>
 </center>
+    <center>
+<p data-aos="fade-up">Video</p>
+<h1 data-aos="fade-up">Gaming Edit</h1>
+<p data-aos="fade-up">This edit was made in about a day, and consisted of captions, motion graphics, and some simple edits.</p>
+<br>
+<br>
+<iframe data-aos="fade-up" id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/watch?v=NgIIAjvyvMc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+<p data-aos="fade-up">This project included simple 3D animation and video editing.</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</center>
 <center>
   <p data-aos="fade-up">Website</p>
   <h1 data-aos="fade-up">michaeldors.com</h1>
