--- a/index.html
+++ b/index.html
@@ -203,10 +203,27 @@
 <p data-aos="fade-up">This edit was made in about a day, and consisted of captions, motion graphics, and some simple edits.</p>
 <br>
 <br>
-<iframe data-aos="fade-up" id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/watch?v=NgIIAjvyvMc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe data-aos="fade-up" id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/embed/ksoNzs1_J10?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
-<p data-aos="fade-up">This project included simple 3D animation and video editing.</p>
+<p data-aos="fade-up">This project included video editing.</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</center>
+       <center>
+<p data-aos="fade-up">Video</p>
+<h1 data-aos="fade-up">Gaming Edit</h1>
+<p data-aos="fade-up">This edit was made in around a day, and consisted of some simple edits.</p>
+<br>
+<br>
+<iframe data-aos="fade-up" id="portfolio" width="75vh"; height="75vh"; src="https://www.youtube.com/embed/NgllAjvyvMc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+<p data-aos="fade-up">This project included video editing.</p>
 <br>
 <br>
 <br>
