--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 
 <section style="height: 100px"><p style=" color:#F6EEE3">hi</p></section>
-  <h1 data-aos="fade-up" id="home">My name is<br /><span style="color:#000000; padding-top:100px;">Michael Dors</span></h1>
+  <h1 data-aos="fade-up" id="home">Hi, I'm<br /><span style="color:#000000; padding-top:100px;">Michael Dors</span></h1>
   <p data-aos="fade-up" class="barcode">MICHAELDORS.COM</p>
 
   <div class="marquee">
