--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <br>
   <br>
   <br>
-  <h1 data-aos="fade-up" style="color:black">I create content that engages a wide variety of audiences,</h1>
+  <h1 data-aos="fade-up" style="color:black">I create content that engages a <span style="background: -webkit-linear-gradient(#960b02, #960b02, #029636, #560296, #960231); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">wide variety</span> of audiences,</h1>
   <h1 data-aos="fade-up" style="color:red">Is yours next?</h1>
   <br>
 
