--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <h1 data-aos="fade-up">Video Pricing</h1>
       <br>
       <br>
-  <img id="pricinginfo" data-aos="fade-up" style="width: 70%;" src="Images/vidpricing.png">  
+  <img id="pricinginfo" data-aos="fade-up" style="width: 70%;" src="Images/vidprice.png">  
           <br>
   <br>
       <br>
@@ -309,7 +309,7 @@
           <h1 data-aos="fade-up">Design Pricing</h1>
       <br>
       <br>
-  <img data-aos="fade-up" style="width: 70%;" src="Images/designpricing.png">  
+  <img data-aos="fade-up" style="width: 70%;" src="Images/designprice.png">  
 <Br>
         <br>
       <br>
