--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <center>
   <p data-aos="fade-up">Website</p>
   <h1 data-aos="fade-up">michaeldors.com</h1>
-  <p data-aos="fade-up">Although not as obvious, the page your on is a perfect example of the kind of things I can do with a website. When creating a website, you get to pick everything, I just code it.</p>
+  <p data-aos="fade-up">Although not as obvious, the page you're on is a perfect example of the kind of things I can do with a website. When creating a website, you get to pick everything, I just code it.</p>
   <br>
   <br>
   <p data-aos="fade-up">This project included simple web development.</p>
