--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -186,8 +186,14 @@
     top: 100%;
   }
     #clock{
-    font-size: 90pvw;
+    font-size: 75vw;
   }
+    h1{
+    font-size: 50vw;
+    }
+    p{
+    font-size: 30vw;
+    }
 
 }
 </style>
