--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -441,35 +441,35 @@ var x = setInterval(function() {
 }, 1000);
 
 function arorf(){
-  if(getCookie("arorf")){
-    setCookie("arorf, 0");
+  if(getCookie(arorf)){
+    setCookie(arorf, 0);
   }
   else{
-    setCookie("arorf, 1");
+    setCookie(arorf, 1);
   }
 }
 function coce(){
-  if(getCookie("coce")){
-    setCookie("coce, 0");
+  if(getCookie(coce)){
+    setCookie(coce, 0);
   }
   else{
-    setCookie("coce, 1");
+    setCookie(coce, 1);
   }
 }
 function atc(){
-  if(getCookie("atc")){
-    setCookie("atc, 0");
+  if(getCookie(atc)){
+    setCookie(atc, 0);
   }
   else{
-    setCookie("atc, 1");
+    setCookie(atc, 1);
   }
 }
 function plct(){
-  if(getCookie("plct")){
-    setCookie("plct, 0");
+  if(getCookie(plct)){
+    setCookie(plct, 0);
   }
   else{
-    setCookie("plct, 1");
+    setCookie(plct, 1);
   }
 }
 
