--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -478,34 +478,34 @@ if (getCookie("plct")) {
 
 function arorf(){
   if(getCookie('arorf')){
-    setCookie('arorf', 'true');
+    eraseCookie('arorf');
   }
   else{
-    setCookie('arorf', 'false');
+    setCookie('arorf', 'true');
   }
 }
 function coce(){
   if(getCookie('coce')){
-    setCookie('coce', 'true');
+    eraseCookie('coce');
   }
   else{
-    setCookie('coce', 'false');
+    setCookie('coce', 'true');
   }
 }
 function atc(){
   if(getCookie('atc')){
-    setCookie('atc', 'true');
+    eraseCookie('atc');
   }
   else{
-    setCookie('atc', 'false');
+    setCookie('atc', 'true');
   }
 }
 function plct(){
   if(getCookie('plct')){
-    setCookie('plct', 'true');
+    eraseCookie('plct');
   }
   else{
-    setCookie('plct', 'false');
+    setCookie('plct', 'true');
   }
 }
 
