--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -261,6 +261,7 @@
     padding:20px;
     user-select:none;
     cursor:pointer;
+    z-index:200;
   }
   .settings:hover{
     position:relative;
@@ -324,6 +325,7 @@
     object-fit: cover;
     border-radius: 0%;
     box-shadow: none;
+    height:0.5in;
   }
   #ad_container{
     top: 100%;
@@ -331,7 +333,9 @@
   #clock{
     font-size: 90pvw;
   }
-
+  .settings{
+    font-size:20px;
+  }
 }
 </style>
 
